# smile-identity-core-python

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  IDApi.py  IDParameters.py  ImageParameters.py  LICENSE  MANIFEST.in  Options.py  PartnerParameters.py  README.md  README.rst  SIDServer.py  Signature.py  Utilities.py  WebApi.py  changelog.md  dev-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  socket.yml
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: audit.yml  gitleaks.yml  publish.yml  semgrep.yml  test.yml
examples/: biometric_kyc.py  business_verification.py  document_verification.py  enhanced_document_verification.py  enhanced_kyc.py  smartSelfie_registration.py  smart_selfie_authentication.py  smart_selfie_registration.py
migration_guides/: v2_2_0.md
smile_id_core/: BusinessVerification.py  IdApi.py  ServerError.py  Signature.py  SmileIdError.py  Utilities.py  WebApi.py  __init__.py  base.py  constants.py  image_upload.py  types.py
src/: IDApi.py  IDParameters.py  IdApi.py  Options.py  PartnerParameters.py  SIDServer.py  Signature.py  Utilities.py  WebApi.py  __init__.py
tests/: TestAuthentication.py  TestEnrollWithIDCard.py  TestEnrollWithIDInfo.py  TestIDApi.py  TestIDValidation.py  TestSignature.py  TestUpdatePhoto.py  TestUtilities.py  TestWebApi.py  __init__.py  conftest.py  setup_config_test.py  stub_mixin.py  test_business_verification.py  test_constants.py  test_id_api.py  test_image_upload.py  test_signature.py  test_utilities.py  test_web_api.py
