[tool.poetry]
name = "smile-id-core"
version = "1.0.9"
description = "The official Smile Identity package exposes four classes namely; the WebApi class, the IDApi class, the Signature class and the Utilities class."
license = "MIT"
authors = ["Smile Identity <support@smileidentity.com>"]
readme = "README.md"
homepage = "https://github.com/smileidentity/smile-identity-core-python-3"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
packages = [{ include = "smile_id_core" }]
exclude = ["tests/**/*"]

[tool.poetry.dependencies]
pycryptodome = "^3.15.0"
python = "^3.6.2"
requests="^2.27.1"

[tool.poetry.group.dev.dependencies]
black="^22.8.0"
coverage="^6.2"
mypy="^0.971"
pytest-cov="^4.0.0"
pytest-xdist="^3.0.2"
pytest="^7.0.1"
responses="^0.17.0"
types-requests="^2.28.11.4"

[tool.mypy]
files = "smile_id_core,tests"
pretty = true
show_error_codes = true
strict_equality = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
