[tool.poetry]
name = "smile-id-core"
version = "2.0.1"
description = "The official Smile Identity package exposes four classes. WebApi, IDApi, Signature, and Utilities."
license = "MIT"
authors = ["Smile Identity <support@smileidentity.com>"]
readme = "README.md"
homepage = "https://github.com/smileidentity/smile-identity-core-python-3"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
packages = [{ include = "smile_id_core" }]
exclude = ["tests/**/*"]

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
pycryptodome = "^3.15.0"
python = "^3.6.2"
requests = "^2.27.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.10.1"
pytest = "^7.0.1"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.0.2"
responses = "^0.17.0"

[tool.poetry.group.github-actions]
optional = true

[tool.poetry.group.github-actions.dependencies]
pytest-github-actions-annotate-failures = "^0.1.7"

[tool.poetry.group.typing]
optional = true

[tool.poetry.group.typing.dependencies]
mypy = "^0.971"
types-requests = "^2.28.11.4"

[tool.isort]
profile = "black"

[tool.mypy]
files = "smile_id_core,tests"
pretty = true
show_error_codes = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "-n auto"
testpaths = [
    "tests"
]
