[tool.poetry]
name = "smile-id-core"
version = "3.0.1"
description = "The official Smile Identity package exposes four classes namely; the WebApi class, the IDApi class, the Signature class and the Utilities class."
license = "MIT"
authors = ["Smile Identity <support@usesmileid.com>"]
readme = "README.md"
homepage = "https://github.com/smileidentity/smile-identity-core-python-3"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
packages = [{ include = "smile_id_core" }]
exclude = ["tests/**/*"]

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
pycryptodome = "^3.0.0"
python = "^3.8"
requests = "^2.0.0"
typing-extensions = "^4.2.0"
types-requests = "^2.0.0.0"

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
black = ">=22.8,<24.0"
coverage = "7.6.1"
isort = "^5.10.1"
mock = ">=4.0.3,<6.0.0"
mypy = "1.4.1"
pre-commit = { version = "^3.3.3", python = ">= 3.8" }
pydocstyle = "^6.3.0"
pylint = "3.2.7"
pytest = ">=7.0.1,<9.0.0"
pytest-cov = ">=4,<6"
pytest-xdist = "^3.0.2"
responses = ">=0.17,<0.26"
ruff = ">=0.0.282,<0.5.7"
types-mock = ">=4.0.15.2,<6.0.0.0"

[tool.poetry.group.github-actions]
optional = true
[tool.poetry.group.github-actions.dependencies]
pytest-github-actions-annotate-failures = ">=0.1.7,<0.3.0"

[tool.black]
line-length = 80
target-version = ['py39']

[tool.coverage.run]
omit = [
  "tests/*",
]

[tool.isort]
profile = "black"
line_length = 80

[tool.mypy]
allow_untyped_decorators = true
disallow_untyped_defs = false
files = "smile_id_core,tests"
no_implicit_reexport = false
pretty = true
show_error_codes = true
strict = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = false
warn_unused_configs = false
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
